fix spacing, create footers for questions, created non-functional mc question component, add in temp logo

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,11 +23,11 @@
 }
 
 .login-link:visited {
-    color: #46505A;
+    color: #000000;
 }
 
 .link:visited {
-    color: rgb(6, 6, 6);
+    color: rgb(0, 0, 0);
 }
 
 .button {
@@ -46,9 +46,9 @@ nav {
 
 .logo {
     display: inline-block;
-    margin-left: 50px;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-top: 5px;
+    margin-bottom: 0px;
 }
 
 .class_logo {
@@ -59,6 +59,7 @@ nav {
 .progress-bar {
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 2%;
 }
 
 .form {
@@ -73,3 +74,39 @@ nav {
     height: 60px;
     margin: 10px;
 }
+
+.footer-correct {
+    position: fixed;
+    left: 0;
+    height: 150px;
+    background-color: rgb(82, 212, 82);
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer-incorrect {
+    position: fixed;
+    left: 0;
+    height: 150px;
+    background-color: #f74825;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer-declaration {
+    position: fixed;
+    left: 400px;
+    bottom: 65px;
+  }
+
+  .footer-next-button {
+    position: fixed;
+    bottom: 50px;
+    right: 350px;
+    background-color: rgba(240, 248, 255, 0.97);
+    border-radius: 25px;
+    color: rgba(255, 255, 255, 0);
+    text-decoration: none;
+  }
